feat  모델과 wpf 연결

--- a/ComeBackHome.csproj
+++ b/ComeBackHome.csproj
@@ -26,6 +26,12 @@
     <None Update=".gitignore">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="assets\models\best.pt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="scripts\infer_to_txt.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
